# tasks-finance-tracker-mircoservices

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  test_regex.py
.github/: DOCUMENTATION_INDEX.md  copilot-instructions.md
deploy/nginx/: nginx.conf
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx  index.css  (+2 more)
desktop/src-tauri/: tauri.conf.json
docs/: AI_AGENT_CAPABILITIES.md  ANALYTICS_SERVICE_AUTH.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CORE_SERVICE_ARCHITECTURE.md  DEPLOYMENT.md  OFFLINE_FIRST_APP.md  README.md  USERS_SERVICE_CHANGES.md  frontend-prepare.md
services/ai_service/: Dockerfile  alembic.ini  pyproject.toml
services/ai_service/alembic/: env.py
services/ai_service/app/: agent.py  auth.py  config.py  database.py  main.py  models.py  tools.py
services/ai_service/app/api/: chat.py
services/ai_service/app/schemas/: commands.py
services/analytics/: Dockerfile  README.md  alembic.ini  auth.py  database.py  entrypoint-with-worker.sh  entrypoint.sh  main.py  models.py  pyproject.toml  router.py  schemas.py  worker.py
services/analytics/alembic/: env.py
services/analytics/alembic/versions/: 11d4143119f5_initial_migration.py  22e5254220f6_add_user_id_to_analytics_events.py
services/analytics/app/: __init__.py
services/analytics/app/api/: router.py
services/analytics/app/core/: __init__.py  auth.py  config.py  database.py
services/analytics/app/models/: __init__.py  analytics_event.py
services/analytics/app/schemas/: __init__.py  analytics.py
services/analytics/app/workers/: events_consumer.py
services/core/: .env.example  Dockerfile  alembic.ini  api_categories.py  api_purchases.py  api_smart_views.py  api_tasks.py  auth.py  database.py  entrypoint.sh  events.py  main.py  models.py  pyproject.toml  router.py  schemas.py
services/core/alembic/: env.py
services/core/alembic/versions/: 5f4ea128de85_initial_migration.py  901f8fb8f92a_add_description_to_tasks.py  add_category_color_icon.py  add_priority_to_tasks.py  add_purchase_created_at.py  e873ed0e9e6c_remove_unused_tables.py
services/core/app/: rpc_worker.py
services/core/app/api/: categories.py  purchases.py  smart_views.py  tasks.py
services/core/app/core/: auth.py  config.py  database.py  events.py
services/core/app/models/: __init__.py  category.py  mixins.py  purchase.py  smart_view.py  task.py
services/core/app/schemas/: __init__.py  category.py  commands.py  common.py  purchase.py  smart_view.py  task.py
services/core/app/services/: categories.py  purchases.py  tasks.py
services/core/app/workers/: events_consumer.py
services/users/: Dockerfile  alembic.ini  auth.py  database.py  entrypoint.sh  events.py  main.py  models.py  pyproject.toml  router.py  schemas.py
services/users/alembic/: env.py
services/users/alembic/versions/: a3b2c1d4e5f6_add_username_field.py  b4c3d2e1f0a9_add_user_sessions.py  f0408cf8deef_initial_migration.py
services/users/app/api/: router.py
services/users/app/core/: auth.py  config.py  database.py  events.py
services/users/app/models/: user.py
services/users/app/schemas/: __init__.py  user.py
(+56 files in other folders)
